--- a/2.css
+++ b/2.css
@@ -182,7 +182,7 @@ a {
   margin-left: 32px;
   width: 100%;
   height: 130px;
-  background-image: url(assets/icons8-star-64.png);
+  background-image: url(./assets/icons8-star-64.png);
   background-position: left;
   background-repeat: no-repeat;
   background-size: 4vw;
@@ -191,7 +191,7 @@ a {
   margin-left: 32px;
   width: 100%;
   height: 130px;
-  background-image: url(assets/icons8-secure-64.png);
+  background-image: url(./assets/icons8-secure-64.png);
   background-position: left;
   background-repeat: no-repeat;
   background-size: 4vw;
@@ -200,7 +200,7 @@ a {
   width: 100%;
   margin-left: 32px;
   height: 130px;
-  background-image: url(assets/icons8-telegram-64.png);
+  background-image: url(./assets/icons8-telegram-64.png);
   background-position: left;
   background-repeat: no-repeat;
   background-size: 4vw;
@@ -310,7 +310,7 @@ a {
 .card1 {
   width: 25%;
   height: 360px;
-  background-image: url(assets/icons8-quote-50.png);
+  background-image: url(./assets/icons8-quote-50.png);
   background-position: top;
   background-repeat: no-repeat;
   background-size: 4vw;
@@ -334,7 +334,7 @@ a {
 .card2 {
   width: 25%;
   height: 360px;
-  background-image: url(assets/icons8-quote-50.png);
+  background-image: url(./assets/icons8-quote-50.png);
   background-position: top;
   background-repeat: no-repeat;
   background-size: 4vw;
@@ -342,7 +342,7 @@ a {
 .card3 {
   width: 25%;
   height: 340px;
-  background-image: url(assets/icons8-quote-50.png);
+  background-image: url(./assets/icons8-quote-50.png);
   background-position: top;
   background-repeat: no-repeat;
   background-size: 4vw;
